--- a/_posts/2019-08-16-second.md
+++ b/_posts/2019-08-16-second.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "my second blog"
 date:   2019-07-16 11:00:00
-author: Ilyaki
+author: Eric
 ---
 Universal Split Screen v1.0.0 has just been released!
 
